--- a/cute.html
+++ b/cute.html
@@ -1,27 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <style>
-            div{
-        		width: 300px;
-        		height: 300px;
-        		margin:0 auto;
-        		margin-top: 100px;
-                background-color: green;
-        	}
-            div img{
-        		width: 50%;
-        		height: 50%;
-                margin-top: 22%;
-                margin-left: 25%;
-        		transition: all 0.6s;    
-        		cursor: pointer;
-        	}
-            div img:hover{
-        		transform: scale(10);  
-                border-radius: 50%;
-        	}
-        </style>
+        <link href=chatroom/css/cute.css />
     </head>
     <body>
        <div>
