--- a/cute.html
+++ b/cute.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href=chatroom/css/cute.css />
+        <link href="chatroom/css/cute.css" />
     </head>
     <body>
        <div>
