--- a/cute.html
+++ b/cute.html
@@ -3,6 +3,7 @@
     <head>
         <link href="chatroom/css/cute.css" />
     </head>
+    <script src="chatroom/js/cute.js"></script>
     <body>
        <div>
             <img src="kt.jpeg" />
