--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -6,8 +6,8 @@
     <meta name=viewport content="width=device-width,initial-scale=1">
     <link rel=icon href=favicon.ico>
     <title>chatroom</title>
-    <link href=css/app.92793c8c.css rel=preload as=style>
-    <link href=css/chunk-vendors.359e40b6.css rel=preload as=style>
+    <link href="css/app.92793c8c.css" rel=preload as=style>
+    <link href="css/chunk-vendors.359e40b6.css" rel=preload as=style>
     <link href=js/app.bdf8d064.js rel=preload as=script>
     <link href=js/chunk-vendors.6e3b25ad.js rel=preload as=script>
     <link href=css/chunk-vendors.359e40b6.css rel=stylesheet>
