--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link href="chatroom/css/cute.css" />
+        <link  rel="stylesheet" type="text/css" href="chatroom/css/cute.css" >
     </head>
     <script src="chatroom/js/cute.js"></script>
     <body>
