--- a/chatroom/index.html
+++ b/chatroom/index.html
@@ -8,10 +8,10 @@
     <title>chatroom</title>
     <link href="css/app.92793c8c.css" rel=preload as=style>
     <link href="css/chunk-vendors.359e40b6.css" rel=preload as=style>
-    <link href=js/app.bdf8d064.js rel=preload as=script>
-    <link href=js/chunk-vendors.6e3b25ad.js rel=preload as=script>
-    <link href=css/chunk-vendors.359e40b6.css rel=stylesheet>
-    <link href=css/app.92793c8c.css rel=stylesheet>
+    <link href="js/app.bdf8d064.js" rel=preload as=script>
+    <link href="js/chunk-vendors.6e3b25ad.js" rel=preload as=script>
+    <link href="css/chunk-vendors.359e40b6.css" rel=stylesheet>
+    <link href="css/app.92793c8c.css" rel=stylesheet>
 </head>
 <body>
 <noscript><strong>We're sorry but chatroom doesn't work properly without JavaScript enabled. Please enable it to
