--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <body>
        <div>
             <img src="kt.jpeg" />
+           <img src="http://101.132.121.132:80/kt.jpeg">
        </div>
     </body>
 </html>
